fix larrys gift colors in dark mode, closes #424

--- a/src/modules/native-dark-mode/styles/general.css
+++ b/src/modules/native-dark-mode/styles/general.css
@@ -170,3 +170,8 @@ body.mh-dark {
 .mh-dark .mousehunt-improved-error p {
   color: var(--d-red-dark);
 }
+
+.claimGiftPage__giftQuantity,
+.claimGiftPage__giftDescription {
+  color: var(--d-text-dark);
+}
